tests/baselines/reference/parserErrantSemicolonInClass1.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserErrantSemicolonInClass1.ts(9,21): error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserErrantSemicolonInClass1.ts (1 errors) ====
    class a {
        //constructor ();
        constructor (n: number);
        constructor (s: string);
        constructor (ns: any) {
    
        }
    
        public pgF() { };
                        ~
!!! error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
    
        public pv;
        public get d() {
            return 30;
        }
        public set d() {
        }
    
        public static get p2() {
            return { x: 30, y: 40 };
        }
    
        private static d2() {
        }
        private static get p3() {
            return "string";
        }
        private pv3;
    
        private foo(n: number): string;
        private foo(s: string): string;
        private foo(ns: any) {
            return ns.toString();
        }
    }
    